update ZhiHu account

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ future: true
 # SNS settings
 RSS: false
 weibo_username:     3614037533
-zhihu_username:     yang-ling-yun-40
+zhihu_username:     mental2008
 github_username:    mental2008
 twitter_username:   iMendel1999
 facebook_username:  100015012043418
