--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ RSS: false
 weibo_username:     3614037533
 zhihu_username:     mental2008
 github_username:    mental2008
-twitter_username:   iMendel1999
+twitter_username:   stephenyang1999
 facebook_username:  100015012043418
 linkedin_username:  lingyun-yang-b2881b18a
 
