--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,10 @@ header-img: img/background.jpg
 email: mental2008@163.com
 description: "ACMer/SCUTer"
 keyword: "mental2008"
-url: "https://blog.yanglingyun.me" # your host, for absolute URL
-baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
+# your host, for absolute URL
+url: "https://blog.lingyunyang.com"
+# for example, '/blog' if your blog hosted on 'host/blog'
+baseurl: ""
 
 # Publish posts or collection documents with a future date.
 future: true
@@ -18,7 +20,7 @@ zhihu_username:     mental2008
 github_username:    mental2008
 twitter_username:   stephenyang1999
 facebook_username:  100015012043418
-linkedin_username:  lingyun-yang-b2881b18a
+linkedin_username:  stephenyang1999
 
 # Build settings
 # from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
@@ -28,7 +30,7 @@ paginate: 10
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md","README.zh.md"]
 anchorjs: true # if you want to customize anchor. check out line:181 of `post.html`
 # If you have timezone issue (e.g. #68) in China, uncomment to use this:
-timezone: CN  
+timezone: Asia/Hong_Kong
 
 # Gems
 # from PR#40, to support local preview for Jekyll 3.0
@@ -71,13 +73,17 @@ disqus_username: mental2008
 ga_track_id: 'G-8YVSXN5NVF'
 
 # Sidebar settings
-sidebar: true                           # whether or not using Sidebar.
+# whether or not using Sidebar.
+sidebar: true
 sidebar-about-description: "Winter is coming<br>一如既往，万事胜意"
-sidebar-avatar: /img/tohsaka_rin.png # use absolute URL, seeing it's used in both `/` and `/about/`
+# use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/tohsaka_rin.png
 
 # Featured Tags
-featured-tags: true                     # whether or not using Feature-Tags
-featured-condition-size: 1              # A tag will be featured if the size of it is more than this condition value
+# whether or not using Feature-Tags
+featured-tags: true
+# A tag will be featured if the size of it is more than this condition value
+featured-condition-size: 1
 
 # Progressive Web Apps
 chrome-tab-theme-color: "#000000"
